testsuite/tests/parser/should_fail/StringInterpolationInPat.hs
{-# LANGUAGE StringInterpolation #-}

test :: String -> ()
test s"hello ${x}" = ()

x :: String
x = "world"
