testsuite/tests/parser/should_fail/StringInterpolationInPat.stderr
StringInterpolationInPat.hs:4:6: error: [GHC-04584]
    Expression syntax in pattern: s"hello ${x}"

